deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omega-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - omegaempleos.com
      secretName: omegaempleos-tls
  rules:
    - host: omegaempleos.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: "/backend"
            pathType: Prefix
            backend:
              service:
                name: fastapi
                port:
                  number: 8000
